[package]
name = "ttl-queue"
description = "A queue that drops its content after a given amount of time."
authors = ["Markus Mayer"]
keywords = ["queue", "ttl", "fps-counter"]
categories = ["data-structures", "game-development"]
repository = "https://github.com/sunsided/ttl-queue.git"
homepage = "https://github.com/sunsided/ttl-queue"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[features]
default = ["vecdeque"]
doublestack = []
vecdeque = []
tokio = ["dep:tokio"]

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
tokio = { version = "1.29.1", optional = true, default-features = false, features = ["time"] }
